# Cha-Cuit

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  config.toml  hugo_stats.json  instances.txt  package-lock.json
.github/workflows/: check-rust.yml  hugo.yml
assets/css/: site.css
cha-cuit-activityserver/: Cargo.toml
cha-cuit-activityserver/chadiverse/: My Article.md
cha-cuit-activityserver/src/: TODO  main.rs
chactivityserver/: Cargo.toml  README.md  config.json  test.sh
chactivityserver/src/: TODO  articleparser.rs  chunk.rs  config.rs  follow.rs  inbox.rs  likes.rs  main.rs  noteparser.rs  profile.rs  server.rs
content/: about.md
content/TODO/: chili-con-carne.md  european-chili-con-carne.md
content/desserts/: macarons-chocolat.md  palmiers.md
content/recettes/: banh-bao.md  beignet-crevette-patates-douces.md  bhajis-poulet.md  biere.md  bo-bun.md  boeuf-loc-lan.md  bouillon-fondue-boeuf.md  bretzel.md  brioche-chocolat.md  brownie.md  carottes-roties-masala.md  cassoulet.md  chakchouka.md  chatons-aux-pommes.md  cheesecake-framboise.md  cheesecake.md  chocolatine.md  chouquettes.md  choux-fleurs-rotis.md  compote-de-pommes.md  confiture-fruits-rouges.md  confiture-rhubarbe.md  cookies-aux-bananes.md  cookies-citron.md  cookies.md  cookioches.md  coquilles-st-jacques.md  cordon-bleu.md  couscous-crevettes.md  creme-chocolat-vegan.md  creme-patissiere-cafe.md  creme-patissiere.md  crepes.md  croissant.md  crostinis-champignons.md  (+82 more)
desserts/: macarons-chocolat.md
repas/: crepes.md
static/: prices
(+13 files in other folders)
