[package]
name = "chactivityserver"
version = "0.1.0"
authors = ["Sébastien (AmarOk) Blin"]
edition = "2018"

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7"
chrono = "0.4"
http-sig = { git = "https://github.com/AmarOk1412/http-signatures", rev="d6d40263cc47e7e564b36b388edf081e83489d40", features = ["openssl", "reqwest"] }
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }
env_logger = "0.5.6"
log = "0.4.1"
