[package]
name = "chactivityserver"
version = "0.1.0"
authors = ["Sébastien (AmarOk) Blin"]
edition = "2018"
license = "BSD 2 Clause"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8"
base64 = "0.21.0"
chrono = "0.4"
http-sig = { git = "https://github.com/AmarOk1412/http-signatures", rev="d6d40263cc47e7e564b36b388edf081e83489d40", features = ["openssl", "reqwest"] }
regex = "1.7.0"
html2text = "0.4.5"
reqwest = { version = "0.11.13", features = ["json"] }
openssl = "0.10.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }
env_logger = "0.5.6"
log = "0.4.1"
rand = "0.8"
url = "2.3.1"
mime = "0.3.17"
